--- a/index.html
+++ b/index.html
@@ -2,9 +2,185 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, Github</title>
+    <title>Bamboo's Profile</title>
+    <meta name="author" content="劉禎竹">
+    <meta name="keyWords" content="">
+    <meta name="description" content="劉禎竹的個人作品集">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body>
-    <h1>Nice to meet you</h1>
+  <body><!--[if lt IE 10]>
+    <div class="old_browser">
+      <div class="old_browser_inner">
+        <div class="oops">OOPS!</div>
+        <div class="oops_title">您的瀏覽器版本太舊了！</div>
+        <p>請更新至 Internet Explorer 10 以上版本或選用更現代化的瀏覽器，<br><br>使用老舊版本的瀏覽器瀏覽本網站將可能有無法預測的錯誤，請儘快更新。<br><br>建議您使用 <a href="http://www.google.com/chrome/" target="_blank">Google Chrome 瀏覽器</a></p>
+      </div>
+    </div><![endif]-->
+    <div id="wrapper">
+      <header id="header">
+        <div class="header_inner"><a class="head_logo" href="index.html"><img class="retina" src="images/logo.png"></a><a id="btn_menu" href="javascript:;"><span></span></a>
+          <nav class="head_nav">
+            <ul>
+              <li><a class="current" href="#about">關於我</a></li>
+              <li><a href="#works">作品</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main id="main">
+        <section class="about" data-anchor="about">
+          <div class="about_main">
+            <div class="pic"><img class="imgA" src="images/img_about01.jpg"><img class="imgB" src="images/img_about02.jpg"></div>
+            <div class="content">
+              <h1 class="title">禎竹 <i class="icon_dot"></i> <span class="en">Bamboo</span></h1>
+              <ul class="about_list">
+                <li>
+                  <h2>[ 學歷 ]</h2>
+                  <P>國立臺中科技大學多媒體設計系畢業</P>
+                </li>
+                <li>
+                  <h2>[ 經歷 ]</h2>
+                  <P>威庭科技 網頁前端工程 近6年<br>
+                    嵐宇科技 網頁設計 近1年
+                  </P>
+                </li>
+                <li>
+                  <h2>[ 技能 ]</h2>
+                  <P>HTML5 - 使用 Pug 加快撰寫速度<br>
+                    Css - RWD 響應式網頁樣式撰寫、使用 Scss 加快撰寫速度<br>
+                    Javascript、jQuery - 撰寫與善用 Pluging 製作效果<br>
+                    Gulp - 用其進行任務工具的管理
+                  </P>
+                </li>
+                <li>
+                  <h2>[ 聯繫 ]</h2>
+                  <P><a href="mailto:qqopp45@gmail.com">qqopp45@gmail.com</a></P>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="works" data-anchor="works">
+          <div class="works_items">
+            <div class="item"><img src="images/works/019.jpg">
+              <div class="text"><a class="link" href="http://www.trusty.com.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.trusty.com.tw/" target="_blank">Trusty</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/020.jpg">
+              <div class="text"><a class="link" href="https://bikonnect.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://bikonnect.com/" target="_blank">Bikonnect</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/021.jpg">
+              <div class="text"><a class="link" href="http://cyclingtime.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://cyclingtime.com/" target="_blank">單車時代</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/022.jpg">
+              <div class="text"><a class="link" href="http://bikeshow.cyclingtime.com/bikeshow_2020/index.php/tw" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://bikeshow.cyclingtime.com/bikeshow_2020/index.php/tw" target="_blank">單車時代 - Bike Show</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/001.jpg">
+              <div class="text"><a class="link" href="https://crewblog.china-airlines.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://crewblog.china-airlines.com/" target="_blank">中華航空-跟著小花趣旅行</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/002.jpg">
+              <div class="text"><a class="link" href="http://www.xxentria-tech.com/index.php/zh-TW" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.xxentria-tech.com/index.php/zh-TW" target="_blank">森鉅科技材料股份有限公司</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript<br>
+                  得獎：<a href="https://www.cssdesignawards.com/sites/xxentria-tech/32707" target="_blank">2018 CSS DESIGN AWARDS UX DESIGN</a><br>
+                  證明文件: <a href="https://drive.google.com/file/d/1P6RsZI2YrwEbm6fmF0_JOhNrEA4ct2nK/view?usp=sharing" target="_blank">文件網址</a>
+                </p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/003.jpg">
+              <div class="text"><a class="link" href="http://jiayehsing.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://jiayehsing.com/" target="_blank">JIA YE HSING CO., LTD.</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/013.jpg">
+              <div class="text"><a class="link" href="https://www.hdzbulk.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.hdzbulk.com/" target="_blank">HDZ 社交平台行銷系統</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/006.jpg">
+              <div class="text"><a class="link" href="http://www.unindasia.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.unindasia.com/" target="_blank">UNIND</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/007.jpg">
+              <div class="text"><a class="link" href="https://www.mitir.com.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.mitir.com.tw/" target="_blank">米提爾牛軋糖</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/008.jpg">
+              <div class="text"><a class="link" href="http://www.topwell-tools.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.topwell-tools.com/" target="_blank">TOP WELL Tools Industrial Co.,Ltd</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/009.jpg">
+              <div class="text"><a class="link" href="https://www.reiju.com.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.reiju.com.tw/" target="_blank">瑞助營造‧REIJU</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/010.jpg">
+              <div class="text"><a class="link" href="https://www.geptkids.org.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.geptkids.org.tw/" target="_blank">GEPT Kids 小學英檢網</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/011.jpg">
+              <div class="text"><a class="link" href="https://www.holsem-foods.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.holsem-foods.com/" target="_blank">舒康雞 HOLSEM</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/012.jpg">
+              <div class="text"><a class="link" href="http://www.whirlpower.com.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.whirlpower.com.tw/" target="_blank">WHIRLPOWER</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/014.jpg">
+              <div class="text"><a class="link" href="http://www.piovision.com/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.piovision.com/" target="_blank">展大國際股份有限公司</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/015.jpg">
+              <div class="text"><a class="link" href="http://www.kingmaker-footwear.com/zh-Hant" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.kingmaker-footwear.com/zh-Hant" target="_blank">信星集團 KINGMAKER</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+            <div class="item"><img src="images/works/016.jpg">
+              <div class="text"><a class="link" href="http://www.alphabet.com.tw/index.php" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="http://www.alphabet.com.tw/index.php" target="_blank">ALPHABET</a>&nbsp;]</h2>
+                <p>參與項目：RWD + HTML + CSS + Javascript</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+    <script src="scripts/vendor.js"></script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
