--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <P>VueJS、API 串接<br>
                     HTML - 使用 Pug 加快撰寫速度<br>
                     Css - RWD 響應式網頁樣式撰寫、使用 Scss 加快撰寫速度<br>
-                    Javascript、jQuery - 撰寫與善用 Pluging 製作效果<br>
+                    Javascript、jQuery - 撰寫與善用 Plugin 製作效果<br>
                     Gulp - 用其進行任務工具的管理
                   </P>
                 </li>
