--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
                 </li>
                 <li>
                   <h2>[ 經歷 ]</h2>
-                  <P>海頓科技有限公司 網頁前端工程 1年<br>
-                    威庭科技有限公司 網頁前端工程 近6年<br>
-                    嵐宇科技有限公司 網頁設計 近1年
+                  <P>優聘資訊科技有限公司 網頁前端工程師 7個月(仍在職)<br>
+                    海頓科技有限公司 網頁前端工程師 1年<br>
+                    威庭科技有限公司 網頁前端工程師 近6年<br>
+                    嵐宇科技有限公司 網頁設計助理 近1年
                   </P>
                 </li>
                 <li>
                   <h2>[ 技能 ]</h2>
-                  <P>VueJS、API 串接<br>
-                    HTML - 使用 Pug 加快撰寫速度<br>
-                    Css - RWD 響應式網頁樣式撰寫、使用 Scss 加快撰寫速度<br>
-                    Javascript、jQuery - 撰寫與善用 Plugin 製作效果<br>
-                    Gulp - 用其進行任務工具的管理
+                  <P>HTML - 使用 Pug 加快撰寫速度。<br>
+                    CSS - RWD 響應式網頁樣式撰寫、使用 Scss 加快撰寫速度。<br>
+                    Javascript - 撰寫與善用 Plugin 製作效果。<br>
+                    Git - 使用Sourcetree、GitHub進行專案版本控管。<br>
+                    前端框架 - 使用 Vue.js 或 Nuxt.js 進行專案前端的開發。<br>
+                    串接資料 - 會用API、WebSocket與後端串接資料，會寫底層處理各階段的事件，並讓協作者方便運用。
                   </P>
                 </li>
                 <li>
