--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li>
                   <h2>[ 經歷 ]</h2>
                   <P>優聘資訊科技有限公司 網頁前端工程師 7個月(仍在職)<br>
-                    海頓科技有限公司 網頁前端工程師 1年<br>
+                    海頓科技有限公司 網頁前端工程師 1年5個月<br>
                     威庭科技有限公司 網頁前端工程師 近6年<br>
                     嵐宇科技有限公司 網頁設計助理 近1年
                   </P>
