--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
               </div>
             </div>
             <div class="item"><img src="images/works/017.jpg">
-              <div class="text"><a class="link" href="demo/leaderex/" target="_blank"><i class="icon_link"></i></a>
-                <h2>[&nbsp;<a href="demo/leaderex/" target="_blank">Leaderex</a>&nbsp;]</h2>
+              <div class="text"><a class="link" href="https://www.leaderex.com.tw/" target="_blank"><i class="icon_link"></i></a>
+                <h2>[&nbsp;<a href="https://www.leaderex.com.tw/" target="_blank">Leaderex</a>&nbsp;]</h2>
                 <p>參與項目：RWD + HTML + CSS + Javascript</p>
               </div>
             </div>
