--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                   <h2>[ 經歷 ]</h2>
-                  <P>硬核科技有限公司 網頁前端工程師 6個月 仍在職<br>
+                  <P>硬核科技有限公司 網頁前端工程師 1年7個月 仍在職<br>
                     優聘資訊科技有限公司 網頁前端工程師 10個月<br>
                     海頓科技有限公司 網頁前端工程師 1年5個月<br>
                     威庭科技有限公司 網頁前端工程師 近6年<br>
